Mon Mar  8 08:19:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/DevGuideExamples/Messenger/Messenger.mpc:
          Removed not needed line

        * examples/DevGuideExamples/Messenger/Messenger_exec_i.h:
          Updated include

Sat Mar  7 15:40:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Logger/Logger_Service.cpp
        * DAnCE/Starter/Starter.cpp
        * DAnCE/Starter/Starter.h
        * DAnCE/tests/NameServiceTest/srv_main.cpp
        * examples/BasicSP/EC/controller.cpp
          Unicode fixes

Fri Mar  6 20:17:32 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * docs/CIAO.pdf:

        This work is based on the TAO 1.4a TAO Developers Guide chapter
        on CIAO published by OCI, with some modification to bring the material
        up to date. This is a continuing, the goal is to improve this
        document with time to serve as the authoritative reference/documentation
        for CIAO users.

        Thanks to OCI for making this chapter publicly available and allowing
        us to modify it.


Fri Mar  6 18:54:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_ComponentServer.mpc:
        * tests/CIAO_ComponentServer/SimpleComponent/SimpleComponent.mpc:
          Use ciao_logger as base project

        * examples/DevGuideExamples/Messenger/Messenger.mpc:
          Layout changes

Fri Mar  6 14:26:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/TargetManager/DomainDataManager.cpp:
          Resolve compile warnings

        * MPC/config/ciao_nodemanager_stub.mpb:
          Use base project

Fri Mar  6 12:01:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/TargetManager/DomainDataManager.cpp
        * DAnCE/TargetManager/ResourceCommitmentManager.cpp
          layout changes

        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc